<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/transparency_full"
    android:orientation="vertical" >
    
	<LinearLayout
	   android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/margin_small"
    	android:layout_marginRight="@dimen/margin_small"
    	android:paddingTop="@dimen/margin_small"
    	android:paddingBottom="@dimen/margin_small"
    	android:gravity="center"
    	android:background="@drawable/layout_white_round_edge"
    	android:orientation="vertical" >
	    
	   <TextView
	       	android:id="@+id/textViewPopupTop" 
	   		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:textColor="@color/text_dark"
    		android:textStyle="bold"
    		android:textSize="@dimen/textSize_header_popup"
    		android:text="@string/we_do_not"/>
	    <TextView
	        android:id="@+id/textViewPopupTop2" 
	   		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:textStyle="bold"
    		android:textColor="@color/text_dark"
    		android:textSize="@dimen/textSize_header_popup"
    		android:text="@string/your_bank_details"/>
	    <TextView
	        android:id="@+id/textViewPopupPhone" 
	   		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:layout_marginTop="@dimen/margin_normal"
    		android:textColor="@color/text_dark"
    		android:textSize="@dimen/payment_popup"
    		android:text="@string/please_call_us"/>
	    <TextView
	        android:id="@+id/textViewPopupSmall1" 
	   		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:textColor="@color/text_dark"
    		android:textSize="@dimen/payment_popup"
    		android:text="@string/to_give_us_your"/>
	    <TextView
	        android:id="@+id/textViewPopupSmall2" 
	   		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:textColor="@color/text_dark"
    		android:textSize="@dimen/payment_popup"
    		android:text="@string/bank_account"/>
	    <View 
	        android:layout_width="match_parent"
    		android:layout_height="1dp"
    		android:layout_marginTop="@dimen/margin_normal"
    		android:background="@color/whitish_grey"/>
	    
	    <TextView
	       	android:id="@+id/textViewPopupOk" 
	   		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:paddingTop="@dimen/margin_small"
    		android:textColor="@color/dark_green_contact_us"
    		android:textSize="@dimen/textSize_header_medium"
    		android:text="@string/ok"/>
	</LinearLayout>
</LinearLayout>
