<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="160dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="10" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/heading_txtview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/just_a_min_text"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="3.5" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/did_u_test_fixer_text"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/view_grey_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5" >

            <TextView
                android:id="@+id/button_dialog_yes"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2.5"
                android:gravity="center"
                android:text="@string/did_u_test_fixer_yes_text"
                android:textColor="@color/dark_green"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/view_grey_color" />

            <TextView
                android:id="@+id/button_dialog_not_yet"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2.5"
                android:gravity="center"
                android:text="@string/did_u_test_fixer_no_text"
                android:textColor="@color/dark_green"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>