<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    	<include layout="@layout/custom_action_bar"/>
        
    </LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:weightSum="12">
    	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="3.30"
	        android:gravity="center|bottom" >
	        
	        <ImageView
                android:id="@+id/image_logosmall"
                android:layout_width="140dp"
                android:layout_height="130dp"
                android:src="@drawable/logo_small" />
	    </LinearLayout>

       		<LinearLayout 
        	android:layout_width="match_parent"
    		android:layout_height="0dp"
    		android:layout_marginBottom="@dimen/margin_normal"
    		android:orientation="vertical"
    		android:gravity="center|top"
    		android:layout_weight="2">
	        
       		<TextView
       		    android:id="@+id/textViewTop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/need_number"
                android:textColor="@color/black"
                android:textSize="19sp" /> 
            <TextView
                android:id="@+id/textVievMiddle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/to_give_you"
                android:textColor="@color/black"
                android:textSize="19sp" />          
       		<TextView
       		     android:id="@+id/textViewBottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/customer_service"
                android:textColor="@color/black"
                android:textSize="19sp" />      
		   </LinearLayout> 
		  
       		<LinearLayout
       		    android:layout_width="match_parent"
       		    android:layout_height="0dp"
       		    android:layout_weight="1.15"
       		    android:weightSum="3.50"
       		    android:gravity="center"
       		    android:orientation="horizontal"
       		    android:layout_marginBottom="8dp"
       		    android:layout_marginTop="4dp" >
       		<LinearLayout 
       		    android:layout_width="0dp"
       		     android:gravity="center"
       		    android:layout_height="match_parent"
       		    android:layout_weight=".9">
       		    
       		    <Spinner
       		        android:id="@+id/spinnerCountryCode"
       		        android:layout_width="match_parent"
       		        android:layout_height="match_parent"   		         
       		        android:spinnerMode="dropdown"
       		        android:background="@drawable/dropdown_edit_detail"
       		        android:textAlignment="center" />

       		</LinearLayout>

			<LinearLayout
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
			    android:layout_marginLeft="10dp"
			    android:gravity="center"
			    android:layout_weight="2.6" >

			    <EditText
			        android:id="@+id/editTextPhoneno"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:background="@drawable/editext_grey_stroke"
			        android:gravity="left|center"
			        android:hint="@string/phone_hint"
			        android:inputType="phone" />
			</LinearLayout>

       		</LinearLayout>
       		
       		<LinearLayout 
       		android:id="@+id/enterOTPLayout"    
        	android:layout_width="match_parent"
    		android:layout_height="0dp"
    		android:paddingLeft="20dp"
    		android:paddingRight="20dp"
    		android:background="@color/otp_count"
    		android:orientation="vertical"
    		android:gravity="center"
    		android:visibility="invisible"
    		android:layout_weight="3.3">
			
       		<TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="6dp"
                android:text="@string/enter_OTP"
                android:textColor="@color/black"
                android:textSize="20sp" />
       		<TextView
       		    android:id="@+id/textViewCounter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="2.00"
                android:textColor="@color/app_green_color"
                android:textSize="25sp" />

       		<EditText
       		    android:id="@+id/ediTextOTP"
       		    android:layout_width="120dp"
       		    android:layout_height="50dp"
       		    android:gravity="center"
       		    android:inputType="number"
       		    android:background="@drawable/editext_grey_stroke"
       		    android:hint="@string/hint_otp" />

       		</LinearLayout>
       		
       		<LinearLayout 
        	android:layout_width="match_parent"
    		android:layout_height="0dp"
    		android:paddingTop="15dp"
    		android:orientation="vertical"
    		android:gravity="center"
    		android:layout_weight="1.5">
       		
       	
       		         
                      <Button
       		        android:id="@+id/button_submit_OTP"
       		        android:layout_width="match_parent"
       		        android:layout_height="match_parent"
       		        android:background="@drawable/green_button_rounded_corners"
       		        android:text="@string/send_otp"
       		        android:visibility="visible"
       		        android:textSize="20sp"
       		        android:textColor="@color/white" />
                       <Button
       		        android:id="@+id/button_submit"
       		        android:layout_width="match_parent"
       		        android:layout_height="match_parent"
       		        android:background="@drawable/green_button_rounded_corners"
       		        android:text="Submit"
       		                android:textSize="20sp"
       		        android:visibility="gone"
       		        android:textColor="@color/white" />

       		   
       			</LinearLayout> 
       		<LinearLayout 
        	android:layout_width="match_parent"
    		android:layout_height="0dp"
    		android:paddingLeft="8dp"
    		android:paddingRight="20dp"
    		android:orientation="vertical"
    		android:gravity="center"
    		android:layout_weight=".5">   
       		    <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dont_worry"
                android:textColor="@color/grey_text"
                android:textSize="11sp" />
       		</LinearLayout>    
       	
       		
    </LinearLayout>
    
</LinearLayout>